# yaml---terraform-final-checker

./: .gitignore  README.md
Checker/: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  Jenkinsfile  (+7 more)
Checker/backend/: .dockerignore  Dockerfile  Dockerfile.ec2  docker-entrypoint.ec2.sh  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt
Checker/backend/alembic/: env.py
Checker/backend/app/: __init__.py  main.py
Checker/backend/app/ai/: analyzer.py  openai_client.py
Checker/backend/app/api/: deps.py
Checker/backend/app/api/v1/: __init__.py  auth.py  dashboard.py  github.py  system.py  validations.py
Checker/backend/app/cache/: __init__.py  validation_cache.py
Checker/backend/app/cli/: __init__.py  main.py
Checker/backend/app/core/: config.py  database.py  env_loader.py  security.py
Checker/backend/app/logging/: __init__.py  setup.py
Checker/backend/app/models/: __init__.py
Checker/backend/app/plugins/: __init__.py  registry.py
Checker/backend/app/reporting/: __init__.py  formats.py
Checker/backend/app/schemas/: __init__.py
Checker/backend/app/security/: scanner.py
Checker/backend/app/services/: auth_service.py  dashboard_service.py  validation_service.py
Checker/backend/app/validators/: terraform_validator.py  yaml_validator.py
Checker/backend/app/workers/: celery_app.py  tasks.py
Checker/backend/tests/: conftest.py
Checker/backend/tests/api/: test_auth.py
Checker/backend/tests/unit/: test_cache.py  test_reporting.py  test_security_scanner.py  test_terraform_validator.py  test_validation_service.py  test_yaml_validator.py
(+73 files in other folders)
