[project]
name = "yaml-terraform-validator"
version = "1.0.0"
description = "Enterprise YAML & Terraform AI Validator SaaS Platform"
requires-python = ">=3.12"

[project.scripts]
ytv = "app.cli.main:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
# Existing codebase style debt — tighten over time
ignore = ["E501", "N802", "B904", "UP007", "UP035", "SIM105", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=0"
pythonpath = ["."]

[tool.bandit]
exclude_dirs = ["tests"]
